# classroom-lm-poc

./: README.md  agent-discovery.ipynb  aggregated-feedback--user-user2.json  evaluation.json  experiment.ipynb  pydantic.ipynb  pyproject.toml  requirements.txt  user1-messages.json  user2-messages.json  utils.py
agent-discovery-v1/: agent-discovery.ipynb  agents.py  feedback.py  knowledge.py  models.py  modified-agent-discovery.ipynb  pydantic.ipynb  utils.py
aggregated-feedback-v0/: aggregated-feedback--user-user1.json  aggregated-feedback--user-user2.json  classroom-aggregated-feedback.json  experiment.ipynb  utils.py
